// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditRating rating 0 matches snapshot 1`] = `
<div
  className="my-rating"
>
  <i
    className="small circle icon"
    onClick={[Function]}
  />
  <i
    className="icon small empty star"
    onClick={[Function]}
  />
  <i
    className="icon small empty star"
    onClick={[Function]}
  />
  <i
    className="icon small empty star"
    onClick={[Function]}
  />
  <i
    className="icon small empty star"
    onClick={[Function]}
  />
  <i
    className="icon small empty star"
    onClick={[Function]}
  />
</div>
`;

exports[`EditRating rating 1 matches snapshot 1`] = `
<div
  className="my-rating"
>
  <i
    className="small circle icon thin"
    onClick={[Function]}
  />
  <i
    className="icon small star"
    onClick={[Function]}
  />
  <i
    className="icon small empty star"
    onClick={[Function]}
  />
  <i
    className="icon small empty star"
    onClick={[Function]}
  />
  <i
    className="icon small empty star"
    onClick={[Function]}
  />
  <i
    className="icon small empty star"
    onClick={[Function]}
  />
</div>
`;

exports[`EditRating rating 5 matches snapshot 1`] = `
<div
  className="my-rating"
>
  <i
    className="small circle icon thin"
    onClick={[Function]}
  />
  <i
    className="icon small star"
    onClick={[Function]}
  />
  <i
    className="icon small star"
    onClick={[Function]}
  />
  <i
    className="icon small star"
    onClick={[Function]}
  />
  <i
    className="icon small star"
    onClick={[Function]}
  />
  <i
    className="icon small star"
    onClick={[Function]}
  />
</div>
`;

exports[`EditRating rating null matches snapshot 1`] = `
<div
  className="my-rating"
>
  <i
    className="small circle icon"
    onClick={[Function]}
  />
  <i
    className="icon small empty star"
    onClick={[Function]}
  />
  <i
    className="icon small empty star"
    onClick={[Function]}
  />
  <i
    className="icon small empty star"
    onClick={[Function]}
  />
  <i
    className="icon small empty star"
    onClick={[Function]}
  />
  <i
    className="icon small empty star"
    onClick={[Function]}
  />
</div>
`;

exports[`Rating 0 matches snapshot 1`] = `
<div
  className="compact my-rating"
/>
`;

exports[`Rating 1 matches snapshot 1`] = `
<div
  className="compact my-rating"
>
  <i
    className="icon small star"
  />
</div>
`;

exports[`Rating 5 matches snapshot 1`] = `
<div
  className="compact my-rating"
>
  <i
    className="icon small star"
  />
  <i
    className="icon small star"
  />
  <i
    className="icon small star"
  />
  <i
    className="icon small star"
  />
  <i
    className="icon small star"
  />
</div>
`;

exports[`Rating null matches snapshot 1`] = `
<div
  className="compact my-rating"
/>
`;
